--- a/.github/workflows/backup-to-google-drive.yml
+++ b/.github/workflows/backup-to-google-drive.yml
@@ -1,62 +1,58 @@
-name: Backup GitHub Repo to Google Drive
+name: Backup to Google Drive
 
 on:
   push:
     branches:
-      - main  # Trigger when there's a push to the 'main' branch
+      - main  # Trigger the action when there's a push to the main branch.
 
 jobs:
   backup:
-    runs-on: ubuntu-latest  # Use the latest Ubuntu runner
+    runs-on: ubuntu-latest  # Use an Ubuntu environment.
 
     steps:
-      # Step 1: Checkout the repository
-      - name: Checkout Repo
-        uses: actions/checkout@v2  # This checks out the repository's code
+    - name: Check out repository
+      uses: actions/checkout@v3  # Check out the repository code.
 
-      # Step 2: Install Python dependencies required for Google Drive API
-      - name: Install dependencies
-        run: |
-          pip install --upgrade pip
-          pip install google-api-python-client google-auth-httplib2 google-auth-oauthlib
+    - name: Set up Python environment
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.x'  # Use the latest version of Python.
 
-      # Step 3: Zip the repository into a file (repo.zip)
-      - name: Zip the repository
-        run: zip -r repo.zip .
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install google-api-python-client google-auth-httplib2 google-auth-oauthlib  # Install required dependencies.
 
-      # Step 4: (Optional) Debug the environment variables
-      - name: Debug Environment Variables
-        run: |
-          echo "GOOGLE_DRIVE_CLIENT_ID=${{ secrets.GOOGLE_DRIVE_CLIENT_ID }}"
-          echo "GOOGLE_DRIVE_CLIENT_SECRET=${{ secrets.GOOGLE_DRIVE_CLIENT_SECRET }}"
-          echo "GOOGLE_DRIVE_REFRESH_TOKEN=${{ secrets.GOOGLE_DRIVE_REFRESH_TOKEN }}"
+    - name: Set up Google Drive credentials
+      run: |
+        echo "GOOGLE_DRIVE_CLIENT_ID=${{ secrets.GOOGLE_DRIVE_CLIENT_ID }}" >> $GITHUB_ENV
+        echo "GOOGLE_DRIVE_CLIENT_SECRET=${{ secrets.GOOGLE_DRIVE_CLIENT_SECRET }}" >> $GITHUB_ENV
+        echo "GOOGLE_DRIVE_REFRESH_TOKEN=${{ secrets.GOOGLE_DRIVE_REFRESH_TOKEN }}" >> $GITHUB_ENV  # Make sure this is correct.
+      
+    - name: Authenticate with Google Drive API using the refresh token
+      run: |
+        python -c "
+import os
+from google.oauth2.credentials import Credentials
+from googleapiclient.discovery import build
 
-      # Step 5: Authenticate with Google Drive API and upload the repo.zip file
-      - name: Authenticate with Google Drive API and upload
-        env:
-          GOOGLE_DRIVE_CLIENT_ID: ${{ secrets.GOOGLE_DRIVE_CLIENT_ID }}
-          GOOGLE_DRIVE_CLIENT_SECRET: ${{ secrets.GOOGLE_DRIVE_CLIENT_SECRET }}
-          GOOGLE_DRIVE_REFRESH_TOKEN: ${{ secrets.GOOGLE_DRIVE_REFRESH_TOKEN }}
-        run: |
-          python -c "
-          from google.oauth2.credentials import Credentials
-          from googleapiclient.discovery import build
-          from googleapiclient.http import MediaFileUpload
-          import os
+# Use the credentials stored in environment variables.
+creds = Credentials.from_authorized_user_info(
+    client_id=os.getenv('GOOGLE_DRIVE_CLIENT_ID'),
+    client_secret=os.getenv('GOOGLE_DRIVE_CLIENT_SECRET'),
+    refresh_token=os.getenv('GOOGLE_DRIVE_REFRESH_TOKEN')
+)
 
-          creds_info = {
-              'client_id': os.getenv('GOOGLE_DRIVE_CLIENT_ID'),
-              'client_secret': os.getenv('GOOGLE_DRIVE_CLIENT_SECRET'),
-              'refresh_token': os.getenv('GOOGLE_DRIVE_REFRESH_TOKEN')
-          }
+# Now you can interact with the Google Drive API.
+drive_service = build('drive', 'v3', credentials=creds)
 
-          creds = Credentials.from_authorized_user_info(info=creds_info)
-
-          service = build('drive', 'v3', credentials=creds)
-
-          file_metadata = {'name': 'backup_repo.zip'}
-          media = MediaFileUpload('repo.zip', mimetype='application/zip')
-
-          file = service.files().create(body=file_metadata, media_body=media, fields='id').execute()
-          print(f'Uploaded file ID: {file["id"]}')
-          "
+# Example: List the first 5 files in your Google Drive to ensure authentication works.
+results = drive_service.files().list(pageSize=5).execute()
+files = results.get('files', [])
+if not files:
+    print('No files found.')
+else:
+    for file in files:
+        print(f"File ID: {file['id']}, Name: {file['name']}")
+        "
+      # This step authenticates and tests the Google Drive API by listing the first 5 files in your Drive.
