--- a/.github/workflows/backup-to-google-drive.yml
+++ b/.github/workflows/backup-to-google-drive.yml
@@ -3,56 +3,56 @@ name: Backup to Google Drive
 on:
   push:
     branches:
-      - main  # Trigger the action when there's a push to the main branch.
+      - main
 
 jobs:
   backup:
-    runs-on: ubuntu-latest  # Use an Ubuntu environment.
+    runs-on: ubuntu-latest
 
     steps:
     - name: Check out repository
-      uses: actions/checkout@v3  # Check out the repository code.
+      uses: actions/checkout@v3
 
     - name: Set up Python environment
       uses: actions/setup-python@v4
       with:
-        python-version: '3.x'  # Use the latest version of Python.
+        python-version: '3.x'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install google-api-python-client google-auth-httplib2 google-auth-oauthlib  # Install required dependencies.
+        pip install google-api-python-client google-auth-httplib2 google-auth-oauthlib
 
     - name: Set up Google Drive credentials
       run: |
         echo "GOOGLE_DRIVE_CLIENT_ID=${{ secrets.GOOGLE_DRIVE_CLIENT_ID }}" >> $GITHUB_ENV
         echo "GOOGLE_DRIVE_CLIENT_SECRET=${{ secrets.GOOGLE_DRIVE_CLIENT_SECRET }}" >> $GITHUB_ENV
-        echo "GOOGLE_DRIVE_REFRESH_TOKEN=${{ secrets.GOOGLE_DRIVE_REFRESH_TOKEN }}" >> $GITHUB_ENV  # Make sure this is correct.
-      
-    - name: Authenticate with Google Drive API using the refresh token
+        echo "GOOGLE_DRIVE_REFRESH_TOKEN=${{ secrets.GOOGLE_DRIVE_REFRESH_TOKEN }}" >> $GITHUB_ENV
+
+    - name: Authenticate with Google Drive API
       run: |
         python -c "
 import os
 from google.oauth2.credentials import Credentials
 from googleapiclient.discovery import build
 
-# Use the credentials stored in environment variables.
+# Authenticate using Google Drive API credentials
 creds = Credentials.from_authorized_user_info(
     client_id=os.getenv('GOOGLE_DRIVE_CLIENT_ID'),
     client_secret=os.getenv('GOOGLE_DRIVE_CLIENT_SECRET'),
     refresh_token=os.getenv('GOOGLE_DRIVE_REFRESH_TOKEN')
 )
 
-# Now you can interact with the Google Drive API.
+# Set up Google Drive service
 drive_service = build('drive', 'v3', credentials=creds)
 
-# Example: List the first 5 files in your Google Drive to ensure authentication works.
+# List files in Google Drive to verify connection
 results = drive_service.files().list(pageSize=5).execute()
 files = results.get('files', [])
+
 if not files:
     print('No files found.')
 else:
     for file in files:
         print(f"File ID: {file['id']}, Name: {file['name']}")
         "
-      # This step authenticates and tests the Google Drive API by listing the first 5 files in your Drive.
