--- a/.github/workflows/backup-to-google-drive.yml
+++ b/.github/workflows/backup-to-google-drive.yml
@@ -54,5 +54,5 @@ if not files:
     print('No files found.')
 else:
     for file in files:
-        print(f"File ID: {file['id']}, Name: {file['name']}")
+        print(f\"File ID: {file['id']}, Name: {file['name']}\")
         "
