--- a/.github/workflows/backup-to-google-drive.yml
+++ b/.github/workflows/backup-to-google-drive.yml
@@ -1,9 +1,7 @@
 name: Backup to Google Drive
 
 on:
-  schedule:
-    - cron: '0 0 * * *'  # This runs every day at midnight
-  workflow_dispatch: # Allows manual trigger from GitHub UI
+  workflow_dispatch: # Manually trigger the workflow
 
 jobs:
   backup:
@@ -11,25 +9,19 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
-      - name: Set up Python 3.x
-        uses: actions/setup-python@v4
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          python-version: 3.13
+          python-version: '3.x'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install google-auth google-auth-oauthlib google-auth-httplib2 google-api-python-client
+          pip install --no-cache-dir -r requirements.txt
 
-      - name: Check environment variables
-        run: |
-          echo "GOOGLE_DRIVE_CLIENT_ID=$GOOGLE_DRIVE_CLIENT_ID"
-          echo "GOOGLE_DRIVE_CLIENT_SECRET=$GOOGLE_DRIVE_CLIENT_SECRET"
-          echo "GOOGLE_DRIVE_REFRESH_TOKEN=$GOOGLE_DRIVE_REFRESH_TOKEN"
-
-      - name: Run Python script for backup
+      - name: Run the backup script
         env:
           GOOGLE_DRIVE_CLIENT_ID: ${{ secrets.GOOGLE_DRIVE_CLIENT_ID }}
           GOOGLE_DRIVE_CLIENT_SECRET: ${{ secrets.GOOGLE_DRIVE_CLIENT_SECRET }}
