--- a/.github/workflows/backup-to-google-drive.yml
+++ b/.github/workflows/backup-to-google-drive.yml
@@ -1,8 +1,3 @@
-name: Backup to Google Drive
-
-on:
-  workflow_dispatch: # Manually trigger the workflow
-
 jobs:
   backup:
     runs-on: ubuntu-latest
@@ -19,7 +14,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --no-cache-dir -r requirements.txt
+          pip install google-auth google-auth-oauthlib google-auth-httplib2 google-api-python-client
 
       - name: Run the backup script
         env:
