--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -1,33 +1,31 @@
-name: Backup to GitHub
+name: Backup MEMEPEDIA to GitHub
 
 on:
   push:
     branches:
-      - main  # Or the branch you want to monitor
+      - main
+  workflow_dispatch:
 
 jobs:
   backup:
     runs-on: ubuntu-latest
+
     steps:
-      # Checkout repository
-      - name: Checkout repository
-        uses: actions/checkout@v2
+    - name: Checkout MEMEPEDIA repository
+      uses: actions/checkout@v3
 
-      # Set up Python
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.9'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
 
-      # Install necessary Python packages
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests PyGithub
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install gitpython
 
-      # Run the backup script
-      - name: Run backup script
-        run: |
-          python backup_to_github.py
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Run the backup script
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      run: |
+        python backup_to_github.py
