--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -5,32 +5,37 @@ on:
     branches:
       - main
   schedule:
-    - cron: '0 0 * * *'  # optional: every day at midnight
+    - cron: '0 0 * * *'  # (optional) every day at midnight
 
 jobs:
   backup:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: write  # VERY important so GITHUB_TOKEN can push
+      contents: write  # IMPORTANT: allow push to repos
 
     steps:
     - name: Checkout source repo
       uses: actions/checkout@v4
+      with:
+        path: source_repo
 
-    - name: Clone backup repo
-      run: |
-        git clone https://${{ secrets.GITHUB_TOKEN }}@github.com/MagicDippyEgg/MEMEPEDIA-BACKUP.git backup_repo
+    - name: Checkout backup repo
+      uses: actions/checkout@v4
+      with:
+        repository: MagicDippyEgg/MEMEPEDIA-BACKUP
+        token: ${{ secrets.GITHUB_TOKEN }}
+        path: backup_repo
 
     - name: Copy files
       run: |
-        rsync -av --exclude=backup_repo ./ backup_repo/
-    
-    - name: Commit and push to backup repo
+        rsync -av --delete --exclude=backup_repo/ ./source_repo/ ./backup_repo/
+
+    - name: Commit and push backup
+      working-directory: backup_repo
       run: |
-        cd backup_repo
         git config user.name "github-actions[bot]"
         git config user.email "github-actions[bot]@users.noreply.github.com"
         git add .
-        git commit -m "Automated backup" || echo "Nothing to commit"
-        git push origin main
+        git commit -m "Automated backup" || echo "No changes to commit"
+        git push
