--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -26,10 +26,11 @@ jobs:
       - name: Clone backup repository
         run: git clone https://github.com/MagicDippyEgg/MEMEPEDIA-BACKUP.git backup_repo
 
-      # Step 4: Copy the files to the backup repository
-      - name: Copy files
-        run: cp -r ./memepedia_content/* backup_repo/
-
+      # Step 4: Copy all files from MEMEPEDIA-CONTENT to the backup repository
+      - name: Copy files to backup repository
+        run: |
+          cp -r MEMEPEDIA-CONTENT/* backup_repo/  # Copy all files from MEMEPEDIA-CONTENT folder to backup repo
+          
       # Step 5: Commit and push changes
       - name: Commit and push changes
         env:
