--- a/.github/workflows/discord-alert.yml
+++ b/.github/workflows/discord-alert.yml
@@ -17,10 +17,10 @@ jobs:
           GITHUB_SHA: ${{ github.sha }}
           GITHUB_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
         run: |
-          curl -H "Content-Type: application/json" -X POST -d '{
-            "embeds": [{
-              "title": "🚀 New Push to '${GITHUB_REPO}'",
-              "description": "**Author:** '${GITHUB_ACTOR}'\n**Commit Message:** '${GITHUB_COMMIT_MESSAGE}'\n[View Commit](https://github.com/${GITHUB_REPO}/commit/${GITHUB_SHA})",
-              "color": 5814783
+          curl -H "Content-Type: application/json" -X POST -d "{
+            \"embeds\": [{
+              \"title\": \"🚀 New Push to ${GITHUB_REPO}\",
+              \"description\": \"**Author:** ${GITHUB_ACTOR}\n**Commit Message:** ${GITHUB_COMMIT_MESSAGE}\n[View Commit](https://github.com/${GITHUB_REPO}/commit/${GITHUB_SHA})\",
+              \"color\": 5814783
             }]
-          }' $DISCORD_WEBHOOK_URL
+          }" $DISCORD_WEBHOOK_URL
