--- a/.github/workflows/discord-alert.yml
+++ b/.github/workflows/discord-alert.yml
@@ -17,10 +17,16 @@ jobs:
           GITHUB_REF_NAME: ${{ github.ref_name }}
         run: |
           # Prepare the commit messages using jq to parse the event data
-          COMMITS=$(jq -r '.commits[] | "- [`\(.id[0:7])`](\(.url)) \(.message | gsub("\n"; " "))"' $GITHUB_EVENT_PATH | paste -s -d "\n")
+          COMMITS=$(jq -r '.commits[] | "- [`\(.id[0:7])`](\(.url)) \(.message | gsub("\n"; " "))"' $GITHUB_EVENT_PATH | paste -s -d "\\n")
+
+          # Debugging: Output the commits to verify the result
+          echo "Commits: $COMMITS"
 
           # Ensure the JSON string is properly escaped for GitHub Actions YAML
           PAYLOAD="{\"embeds\":[{\"title\":\"🚀 New Push to ${GITHUB_REPO}\",\"description\":\"**Author:** [${GITHUB_ACTOR}](https://github.com/${GITHUB_ACTOR})\\n**Branch:** ${GITHUB_REF_NAME}\\n**Commits:**\\n${COMMITS}\",\"color\":5814783,\"timestamp\":\"$(date --utc +%Y-%m-%dT%H:%M:%SZ)\",\"author\":{\"name\":\"${GITHUB_ACTOR}\",\"url\":\"https://github.com/${GITHUB_ACTOR}\",\"icon_url\":\"https://github.com/${GITHUB_ACTOR}.png\"}}]}"
+
+          # Debugging: Output the payload to verify the final format
+          echo "Payload: $PAYLOAD"
 
           # Send the payload to Discord via webhook
           curl -H "Content-Type: application/json" -X POST -d "$PAYLOAD" $DISCORD_WEBHOOK_URL
