--- a/.github/workflows/sync-to-gitea.yml
+++ b/.github/workflows/sync-to-gitea.yml
@@ -3,7 +3,7 @@ name: Sync to Gitea
 on:
   push:
     branches:
-      - main   # or your default branch
+      - main
 
 jobs:
   sync:
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Full clone to avoid shallow update issues
 
       - name: Push to Gitea
         env:
