--- a/.github/workflows/sync-to-gitea.yml
+++ b/.github/workflows/sync-to-gitea.yml
@@ -3,14 +3,11 @@ name: Sync to Gitea
 on:
   push:
     branches:
-      - '**'
-    tags:
-      - '**'
+      - main
 
 jobs:
   sync:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
